// Copyright 2025 Gravitational, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.componentfeatures.v1;

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/componentfeatures/v1;componentfeaturesv1";

// ComponentFeatureID is an identifier for a specific feature supported by a Teleport component.
enum ComponentFeatureID {
  COMPONENT_FEATURE_ID_UNSPECIFIED = 0;
  // ResourceConstraintsV1 indicates support for Resource Constraints and ResourceAccessIDs, as defined in RFD 228.
  COMPONENT_FEATURE_ID_RESOURCE_CONSTRAINTS_V1 = 1;
}

// ComponentFeatures represents a set of features supported by a given Teleport component.
message ComponentFeatures {
  // features is a list of supported feature identifiers.
  repeated ComponentFeatureID features = 1;
}
